--- a/week1.day3.css
+++ b/week1.day3.css
@@ -1,4 +1,86 @@
+header{
+    margin-bottom: 70px;
+    margin-left: 160px;
+    
+}
+.logo{
+    margin-bottom: 30px;
+    width: 200px;
+    height: 70px;
+}
+.textlogo{
+    
+    background-color: rgb(245, 245, 150);
+    background-size: 100px;
+
+}
 body{
-    margin-left: auto;
-    margin-right: auto;
+ width: 300px;
+ margin: auto;
+ 
+}
+p{
+    width: 500px;
+    margin: auto;
+    margin-left: 0;
+    
+}
+section{
+    width: 720px;
+    margin: auto;
+}
+#topping{
+    font-weight: bold;
+}
+#focaccia{
+    font-weight: bold;
+}
+.focaccia{
+    font-weight: bold;
+}
+.intro{
+    width: 720px;
+    margin-bottom: 10px;
+}
+h1{
+    margin-left: 18%;
+    margin-right: 18%;
+    font-size: 1,8em
+}
+
+strong{
+    width: 720px;
+    margin-left: 15%;
+    margin-right: 30%;
+    font-size: 1,7em;
+}
+
+figcaption{
+    color: lightgray;
+    margin-left: 300px;
+    margin-right: 300px;
+    width: 720px;
+    margin-top: 8.9px;
+}
+div{
+    margin-top: 20px;
+    margin-bottom: 50px;
+    
+}
+.ricetta{
+    border-radius: 5% 5% 5% 5%;
+   background-size: cover;
+   background-color: black;
+    
+}
+hr{
+    color: green;
+}
+#feat{
+    color: orange;
+    
+}
+td{
+    width: 50%;
+    box-sizing: border-box;
 }
